select position and js logic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="modal__cookie-bottom">
+	<main class="main">
+		<h1 class="logo">easy cookie</h1>
+		<p class="title">Выбери расположение модального окна cookie</p>
+		<div class="buttons">
+			<button class="button left-modal">Слева</button>
+			<button class="button top-modal">Сверху</button>
+			<button class="button bottom-modal">Снизу</button>
+			<button class="button right-modal">Справа</button>
+		</div>
+	</main>
+
+	<!-- Modals -->
+	<div class="modal">
 		<img src="img/cookie.svg" class="cookie__image" alt="cookie image" width="43px">
 		<p class="cookie__text">
 			Используя наш сервис вы принимаете <b>Условия использования сервиса</b> и <b>Политику конфеденциальности</b>. Мы используем Cookies для точной работы сайта.
