--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			Используя наш сервис вы принимаете <b>Условия использования сервиса</b> и <b>Политику конфеденциальности</b>. Мы используем Cookies для точной работы сайта.
 		</p>
 		<button class="cookie__btn">Принять</button>
+		<button class="modal__close-btn"><span class="close"></span></button>
 	</div>
 	
 	<script src="js/cookiepp.js"></script>
