--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<p class="cookie__text">
 			Используя наш сервис вы принимаете <b>Условия использования сервиса</b> и <b>Политику конфеденциальности</b>. Мы используем Cookies для точной работы сайта.
 		</p>
-		<button class="cookie__btn">Принять</button>
+		<button class="modal__accept-btn">Принять</button>
 		<button class="modal__close-btn"><span class="close"></span></button>
 	</div>
 	
