cookie status witout save in brws

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
 	<main class="main">
-		<h1 class="logo">easy cookie</h1>
+		<!-- skipped, accepted, undefined -->
+		<h1 class="logo">easy cookie: <span class="cookie-status undefined">undefined</span></h1> 
 		<p class="title">Выбери расположение модального окна cookie</p>
 		<div class="buttons">
 			<button class="button left-modal">Слева</button>
