cookie save/delete

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<main class="main">
 		<!-- skipped, accepted, undefined -->
-		<h1 class="logo">easy cookie: <span class="cookie-status undefined">undefined</span></h1> 
+		<h1 class="logo">easy cookie: <span class="cookie-status"></span></h1> 
 		<p class="title">Выбери расположение модального окна cookie</p>
 		<div class="buttons">
 			<button class="button left-modal">Слева</button>
@@ -20,6 +20,7 @@
 			<button class="button bottom-modal">Снизу</button>
 			<button class="button right-modal">Справа</button>
 		</div>
+		<button class="clear-cookie">Очистить куки</button>
 	</main>
 
 	<!-- Modals -->
