--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<main class="main">
-		<!-- skipped, accepted, undefined -->
+		<!-- skipped, accepted, none -->
 		<h1 class="logo">easy cookie: <span class="cookie-status"></span></h1> 
 		<p class="title">Выбери расположение модального окна cookie</p>
 		<div class="buttons">
